[package]
name = "anomaly-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
plotters = "0.3"
rand = "0.8"
rand_distr = "0.4"
log = "0.4"
env_logger = "0.10"
csv = "1.1.6"
clap = {version = "4.3.1", features = ["derive"]} 
parquet = "52.2.0"
arrow = "52.2.0"

[dependencies.candle-core]
git = "https://github.com/huggingface/candle.git"
version = "0.6.0"
default-features = false
features = ["default"]

[dependencies.candle-nn]
git = "https://github.com/huggingface/candle.git"
version = "0.6.0"
default-features = false
features = ["default"]

[dependencies.candle-datasets]
git = "https://github.com/huggingface/candle.git"
version = "0.6.0"

[features]
default = ["metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
